# GLockManager

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  build_init.sh  configure.ac  g_lock_manager.c  g_lock_manager.h  main.c
tests/: .gitignore  conftest.py
tests/TEMPLATE_DIR/: main.c  test.py
tests/basic/: main  main.c  test_basic.py
tests/deadlock/: main  main.c  test_deadlock.py
tests/logging/: main.c
tests/read_write/: main  main.c
tests/recursive/: main  main.c  test_recursive.py
